--- a/index.html
+++ b/index.html
@@ -4,7 +4,234 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="styles/index.css" rel="stylesheet" />
+    <link href="styles/header.css" rel="stylesheet" />
+    <link href="styles/hero.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <ul>
+        <li>
+          <a href="">Facebook</a>
+        </li>
+        <li>
+          <a href="">Instagram</a>
+        </li>
+        <li>
+          <span>
+            <svg
+              fill="#ff8700"
+              width="1rem"
+              height="1rem"
+              viewBox="0 0 1920 1920"
+              xmlns="http://www.w3.org/2000/svg"
+              stroke="#ff8700"
+              stroke-width="0.019200000000000002"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M1920 428.266v1189.54l-464.16-580.146-88.203 70.585 468.679 585.904H83.684l468.679-585.904-88.202-70.585L0 1617.805V428.265l959.944 832.441L1920 428.266ZM1919.932 226v52.627l-959.943 832.44L.045 278.628V226h1919.887Z"
+                  fill-rule="evenodd"
+                ></path>
+              </g>
+            </svg>
+          </span>
+          <a href="">infi@example.com</a>
+        </li>
+      </ul>
+      <div class="icon-text-container">
+        <span>
+          <svg
+            width="1rem"
+            height="1rem"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <g id="Communication / Bell_Ring">
+                <path
+                  id="Vector"
+                  d="M15 17V18C15 19.6569 13.6569 21 12 21C10.3431 21 9 19.6569 9 18V17M15 17H9M15 17H18.5905C18.973 17 19.1652 17 19.3201 16.9478C19.616 16.848 19.8475 16.6156 19.9473 16.3198C19.9997 16.1643 19.9997 15.9715 19.9997 15.5859C19.9997 15.4172 19.9995 15.3329 19.9863 15.2524C19.9614 15.1004 19.9024 14.9563 19.8126 14.8312C19.7651 14.7651 19.7047 14.7048 19.5858 14.5858L19.1963 14.1963C19.0706 14.0706 19 13.9001 19 13.7224V10C19 6.134 15.866 2.99999 12 3C8.13401 3.00001 5 6.13401 5 10V13.7224C5 13.9002 4.92924 14.0706 4.80357 14.1963L4.41406 14.5858C4.29477 14.7051 4.23504 14.765 4.1875 14.8312C4.09766 14.9564 4.03815 15.1004 4.0132 15.2524C4 15.3329 4 15.4172 4 15.586C4 15.9715 4 16.1642 4.05245 16.3197C4.15225 16.6156 4.3848 16.848 4.68066 16.9478C4.83556 17 5.02701 17 5.40956 17H9M18.0186 2.01367C19.3978 3.05299 20.4843 4.43177 21.1724 6.01574M5.98197 2.01367C4.60275 3.05299 3.5162 4.43177 2.82812 6.01574"
+                  stroke="#ff8700"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </g>
+            </g></svg
+        ></span>
+        <p>Get 30% Discount for all foods till April, 25</p>
+      </div>
+    </header>
+    <nav class="navbar">
+      <div class="logo-container">
+        <a href="#">
+          <img src="./static/logo.png" alt="RestFood Logo" />
+        </a>
+      </div>
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Menu</a>
+        </li>
+        <li>
+          <a href="">Order</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+      </ul>
+      <div class="icons-container">
+        <a href="">
+          <svg
+            width="2rem"
+            height="2rem"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M21 21L15.0001 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"
+                stroke="#ffffff"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </g>
+          </svg>
+        </a>
+        <a href="">
+          <svg
+            fill="#ffffff"
+            height="2rem"
+            width="2rem"
+            version="1.1"
+            id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 512.00 512.00"
+            xml:space="preserve"
+            stroke="#ffffff"
+            stroke-width="13.312000000000001"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke="#CCCCCC"
+              stroke-width="2.048"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <g>
+                <g><circle cx="58.182" cy="221.091" r="11.636"></circle></g>
+              </g>
+              <g>
+                <g><circle cx="453.818" cy="221.091" r="11.636"></circle></g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M151.273,314.182c-6.982,0-11.636,4.655-11.636,11.636v93.091c0,6.982,4.655,11.636,11.636,11.636 c6.982,0,11.636-4.655,11.636-11.636v-93.091C162.909,318.836,158.255,314.182,151.273,314.182z"
+                  ></path>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M221.091,314.182c-6.982,0-11.636,4.655-11.636,11.636v93.091c0,6.982,4.655,11.636,11.636,11.636 c6.982,0,11.636-4.655,11.636-11.636v-93.091C232.727,318.836,228.073,314.182,221.091,314.182z"
+                  ></path>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M290.909,314.182c-6.982,0-11.636,4.655-11.636,11.636v93.091c0,6.982,4.655,11.636,11.636,11.636 s11.636-4.655,11.636-11.636v-93.091C302.545,318.836,297.891,314.182,290.909,314.182z"
+                  ></path>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M360.727,314.182c-6.982,0-11.636,4.655-11.636,11.636v93.091c0,6.982,4.655,11.636,11.636,11.636 s11.636-4.655,11.636-11.636v-93.091C372.364,318.836,367.709,314.182,360.727,314.182z"
+                  ></path>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M477.091,162.909h-38.4l-27.927-91.927c-3.491-13.964-17.455-24.436-32.582-24.436h-29.091V34.909 c0-6.982-4.655-11.636-11.636-11.636H174.545c-6.982,0-11.636,4.655-11.636,11.636v11.636h-18.618 c-15.127,0-27.927,8.145-32.582,22.109l-38.4,94.255h-38.4C15.127,162.909,0,178.036,0,197.818v46.545 c0,19.782,15.127,34.909,34.909,34.909h1.164l19.782,178.036c2.327,18.618,17.455,31.418,34.909,31.418h330.473 c17.455,0,32.582-12.8,34.909-31.418l19.782-178.036h1.164c19.782,0,34.909-15.127,34.909-34.909v-46.545 C512,178.036,496.873,162.909,477.091,162.909z M186.182,46.545h139.636v23.273H186.182V46.545z M489.891,244.364h-1.164 c0,6.982-4.655,11.636-11.636,11.636h-11.636H93.091c-6.982,0-11.636,4.655-11.636,11.636s4.655,11.636,11.636,11.636h359.564 l-19.782,175.709c-1.164,5.818-5.818,10.473-11.636,10.473H90.764c-5.818,0-10.473-4.655-11.636-10.473L58.182,266.473 C57.018,260.655,52.364,256,46.545,256H34.909c-6.982,0-11.636-4.655-11.636-11.636v-46.545c0-6.982,4.655-11.636,11.636-11.636 h46.545H384c6.982,0,11.636-4.655,11.636-11.636s-4.655-11.636-11.636-11.636H98.909L132.655,76.8 c2.327-4.655,5.818-6.982,11.636-6.982h18.618v11.636c0,6.982,4.655,11.636,11.636,11.636h162.909 c6.982,0,11.636-4.655,11.636-11.636V69.818h29.091c4.655,0,9.309,3.491,11.636,8.145l30.255,100.073 c1.164,4.655,5.818,8.145,11.636,8.145h46.545c6.982,0,11.636,4.655,11.636,11.636V244.364z"
+                  ></path>
+                </g>
+              </g>
+            </g>
+          </svg>
+        </a>
+        <a href="">
+          <svg
+            fill="#ffffff"
+            width="2rem"
+            height="2rem"
+            viewBox="-3.2 -3.2 38.40 38.40"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            stroke="#ffffff"
+            stroke-width="0.00032"
+            transform="rotate(0)matrix(1, 0, 0, 1, 0, 0)"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <title>user</title>
+              <path
+                d="M4 28q0 0.832 0.576 1.44t1.44 0.576h20q0.8 0 1.408-0.576t0.576-1.44q0-1.44-0.672-2.912t-1.76-2.624-2.496-2.144-2.88-1.504q1.76-1.088 2.784-2.912t1.024-3.904v-1.984q0-3.328-2.336-5.664t-5.664-2.336-5.664 2.336-2.336 5.664v1.984q0 2.112 1.024 3.904t2.784 2.912q-1.504 0.544-2.88 1.504t-2.496 2.144-1.76 2.624-0.672 2.912z"
+              ></path>
+            </g>
+          </svg>
+        </a>
+      </div>
+    </nav>
+    <main>
+      <section class="hero-container">
+        <div class="hero-left">
+          <img src="./static/leafs.png" alt="" />
+          <h1>HAVE A <strong>DELICIOUS</strong> MEAL WITH US.</h1>
+          <p>
+            A restaurant is a place where people go to eat, frequently with
+            firends, family, or coworkers.
+          </p>
+        </div>
+        <img src="./static/hero.png" alt="Tasty Meat" />
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
