--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title></title>
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="styles/header.css" rel="stylesheet" />
     <link href="styles/hero.css" rel="stylesheet" />
+    <link href="styles/index.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <script src="scripts/script.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -70,8 +76,9 @@
                   stroke-linejoin="round"
                 ></path>
               </g>
-            </g></svg
-        ></span>
+            </g>
+          </svg>
+        </span>
         <p>Get 30% Discount for all foods till April, 25</p>
       </div>
     </header>
@@ -230,6 +237,278 @@
           </p>
         </div>
         <img src="./static/hero.png" alt="Tasty Meat" />
+      </section>
+      <section class="about">
+        <img src="static/About.png" alt="Salmon dish with vegetables" />
+        <div class="about-container">
+          <img src="static/leafs.png" alt="leaf" />
+          <h6 class="sofia-regular">About Us</h6>
+          <h1>Discover your favorite food within our restaurant</h1>
+          <p>
+            Discover culinary bliss at "Savoria". with its charming atmosphere,
+            delectable cuisine, and impeccable service, this hidden gem
+            transports you to a world of gastronomic delight. Indulge in a
+            symphony of flavors crafted with passion and precision, leaving your
+            taste buds longing for more.
+          </p>
+          <a href="">Read More</a>
+        </div>
+      </section>
+      <section class="special-offer">
+        <h6 class="sofia-regular">Special Offer</h6>
+        <h1>MOTHER'S DAY</h1>
+        <p>
+          Celebrate Mother's Day with love! Enjoy 20% off on all items as a
+          token of apreciation.
+        </p>
+        <div class="offer-buttons">
+          <a href="">Order Now</a>
+          <a href=""><i class="fa-solid fa-magnifying-glass fa-xs"></i></a>
+          <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+          <a href=""
+            ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+          ></a>
+        </div>
+      </section>
+      <section class="menu">
+        <img src="static/leafs.png" alt="leaf" />
+        <h6 class="sofia-regular">Food Menu</h6>
+        <h1>Our Popular Delicious Foods</h1>
+        <p>
+          Introducing our tantalizing food menu, filled with exquisite flavors
+          and culinary delights to satisfy every palete
+        </p>
+        <div class="filter-buttons">
+          <button type="button" data-category="0">All Menu</button>
+          <button type="button" data-category="1">Burgers</button>
+          <button type="button" data-category="2">Pizza</button>
+          <button type="button" data-category="3">Sticks</button>
+          <button type="button" data-category="4">Salads</button>
+          <button type="button" data-category="5">Desserts</button>
+          <button type="button" data-category="6">Drinks</button>
+        </div>
+        <div class="food-menu">
+          <article class="food-item" data-category="1">
+            <img src="static/FoodMenu/KingBurguer.png" alt="King Burguer" />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>King Burger</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="2">
+            <img src="static/FoodMenu/TomatoPizza.png" alt="Tomato Pizza" />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Tomato Pizza</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="3">
+            <img src="static/FoodMenu/FriedSnacks.png" alt="Fried Snacks" />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Fried Snacks</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="4">
+            <img
+              src="static/FoodMenu/VegetableSalads.png"
+              alt="Vegetable Salads"
+            />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Vegetable Salads</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="3">
+            <img
+              src="static/FoodMenu/FetuccineAlfredo.png"
+              alt="Fetuccine Alfredo"
+            />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Fetuccine Alfredo</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="3">
+            <img
+              src="static/FoodMenu/MacoroniCheese.png"
+              alt="Macoroni Cheese"
+            />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Macoroni Cheese</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="5">
+            <img src="static/FoodMenu/DessertsFood.png" alt="Desserts Food" />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Desserts Food</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+          <article class="food-item" data-category="6">
+            <img
+              src="static/FoodMenu/MargaritaDrinks.png"
+              alt="Margarita Drinks"
+            />
+            <div class="food-container">
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <div class="food-info">
+                <h5>Margarita Drinks</h5>
+                <p>$150</p>
+              </div>
+              <div class="food-buttons">
+                <a href="">Order Now</a>
+                <a href=""
+                  ><i class="fa-solid fa-magnifying-glass fa-xs"></i
+                ></a>
+                <a href=""><i class="fa-regular fa-heart fa-xs"></i></a>
+                <a href=""
+                  ><i class="fa-solid fa-arrow-right-arrow-left fa-xs"></i
+                ></a>
+              </div>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
     <footer></footer>
