Menu, Booking-Opening and Blog Sections finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="styles/header.css" rel="stylesheet" />
     <link href="styles/hero.css" rel="stylesheet" />
     <link href="styles/index.css" rel="stylesheet" />
+    <link href="styles/menu.css" rel="stylesheet" />
+    <link href="styles/booking-opening.css" rel="stylesheet" />
+    <link href="styles/blog.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -270,7 +273,7 @@
           ></a>
         </div>
       </section>
-      <section class="menu">
+      <section class="menu" id="menu">
         <img src="static/leafs.png" alt="leaf" />
         <h6 class="sofia-regular">Food Menu</h6>
         <h1>Our Popular Delicious Foods</h1>
@@ -508,6 +511,145 @@
               </div>
             </div>
           </article>
+        </div>
+      </section>
+      <section class="booking-opening">
+        <form action="" class="boo-op-container">
+          <div class="title-container">
+            <img src="static/leafs.png" alt="leaf" />
+            <h6 class="sofia-regular">Table booking</h6>
+            <h1>Book your table now</h1>
+          </div>
+          <div class="n-person">
+            <div class="input-container">
+              <i class="fa-solid fa-person"></i>
+              <select required>
+                <option value="0" selected>Person</option>
+                <option value="1">1 Adult</option>
+                <option value="2">2 Adult</option>
+                <option value="3">3 Adult</option>
+                <option value="4">4 Adult</option>
+                <option value="5">5 Adult</option>
+              </select>
+            </div>
+
+            <div class="input-container">
+              <i class="fa-solid fa-child"></i>
+              <select required>
+                <option value="0" selected>Kid's</option>
+                <option value="1">1 Child</option>
+                <option value="2">2 Child</option>
+                <option value="3">3 Child</option>
+                <option value="4">4 Child</option>
+                <option value="5">5 Child</option>
+              </select>
+            </div>
+          </div>
+          <div class="time">
+            <div class="input-container">
+              <i class="fa-solid fa-calendar"></i>
+              <input name="date" type="date" min="2024-02-23" required />
+              <label for="date" class="info-label">Date</label>
+            </div>
+            <div class="input-container">
+              <i class="fa-solid fa-clock"></i>
+              <input name="time" type="time" min="07:30" max="23:30" required />
+              <label for="time" class="info-label">Time</label>
+            </div>
+          </div>
+          <div class="message-container">
+            <textarea
+              class="message"
+              name="message"
+              cols="53"
+              rows="5"
+              required
+            ></textarea>
+            <label for="message" class="label-message">
+              <i class="fa-regular fa-comments"></i> Special Message
+            </label>
+          </div>
+          <button type="submit" class="button">Confirm</button>
+        </form>
+        <div class="boo-op-container">
+          <div class="title-container">
+            <img src="static/leafs.png" alt="leaf" />
+            <h6 class="sofia-regular">Opening Time</h6>
+            <h1>Opening Times</h1>
+          </div>
+          <div class="op-time-brln">
+            <div class="op-time">
+              <h4>Breakfast</h4>
+              <time>7 Days 7.30am to 11.30am</time>
+            </div>
+            <div class="op-time">
+              <h4>Lunch</h4>
+              <time>7 Days 12.30pm to 3.30pm</time>
+            </div>
+          </div>
+          <div class="op-time">
+            <h4>Dinner</h4>
+            <time>Every Weekdays 8.30pm to 11.30pm</time>
+          </div>
+          <a href="#menu">Order Now</a>
+        </div>
+      </section>
+      <section class="blog">
+        <img src="static/leafs.png" alt="leaf" />
+        <h6 class="sofia-regular">Our Blog</h6>
+        <h1>Know More About The Article</h1>
+        <div class="wrapper">
+          <button class="btn-left" id="btn-left">
+            <i class="fa-solid fa-angle-left fa-2xl"></i>
+          </button>
+
+          <ul class="carousel">
+            <li class="card">
+              <img
+                src="static/OurBlog/Reservation.png"
+                alt="A family having dinner and enjoying"
+                draggable="false"
+              />
+              <time>15 December, 2022</time>
+              <h4>Explore Taste & The Best Quality Make A Reservation</h4>
+              <p>
+                A great commerce experience cannot be distilled to a single
+                number. It's not a Lighthouse score.
+              </p>
+              <button type="submit" class="button">Read more</button>
+            </li>
+            <li class="card">
+              <img
+                src="static/OurBlog/Journey.png"
+                alt="Chef smiling"
+                draggable="false"
+              />
+              <time>15 December, 2022</time>
+              <h4>Enjoy an exceptional journey of taste of joy</h4>
+              <p>
+                Aenean eleifend ante maecenas pulvinar montes lorem et pede dis
+                dolor pretium donec dictum.
+              </p>
+              <button type="submit" class="button">Read more</button>
+            </li>
+            <li class="card">
+              <img
+                src="static/OurBlog/Chef.jpg"
+                alt="Professional kitchen"
+                draggable="false"
+              />
+              <time>15 December, 2022</time>
+              <h4>Our professional kitchen</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Impedit officia voluptate saepe, corporis ipsum mollitia.
+              </p>
+              <button type="submit" class="button">Read more</button>
+            </li>
+          </ul>
+          <button class="btn-right" id="btn-right">
+            <i class="fa-solid fa-angle-right fa-2xl"></i>
+          </button>
         </div>
       </section>
     </main>
