--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="styles/index.css" rel="stylesheet" />
     <link href="styles/header.css" rel="stylesheet" />
     <link href="styles/hero.css" rel="stylesheet" />
   </head>
@@ -70,8 +71,9 @@
                   stroke-linejoin="round"
                 ></path>
               </g>
-            </g></svg
-        ></span>
+            </g>
+          </svg>
+        </span>
         <p>Get 30% Discount for all foods till April, 25</p>
       </div>
     </header>
@@ -226,8 +228,17 @@
           <h1>HAVE A <strong>DELICIOUS</strong> MEAL WITH US.</h1>
           <p>
             A restaurant is a place where people go to eat, frequently with
-            firends, family, or coworkers.
+            friends,
           </p>
+          <p>family, or coworkers.</p>
+          <div class="flex-container">
+            <button class="primary-button">
+              <a href="#">View Our Menu</a>
+            </button>
+            <button class="primary-button">
+              <a href="#">Book a Table</a>
+            </button>
+          </div>
         </div>
         <img src="./static/hero.png" alt="Tasty Meat" />
       </section>
