hero almost done

--- a/index.html
+++ b/index.html
@@ -235,12 +235,14 @@
         <div class="hero-left">
           <img src="./static/leafs.png" alt="" />
           <h1>HAVE A <strong>DELICIOUS</strong> MEAL WITH US.</h1>
-          <p>
-            A restaurant is a place where people go to eat, frequently with
-            friends,
-          </p>
-          <p>family, or coworkers.</p>
-          <div class="flex-container">
+          <div class="hero-p">
+            <p>
+              A restaurant is a place where people go to eat, frequently with
+              friends,
+            </p>
+            <p>family, or coworkers.</p>
+          </div>
+          <div class="hero-buttons-container">
             <button class="primary-button">
               <a href="#">View Our Menu</a>
             </button>
@@ -248,8 +250,19 @@
               <a href="#">Book a Table</a>
             </button>
           </div>
+          <div class="hero-cards-container">
+            <div class="hero-card">
+              <img src="static/hero-card1.png" alt="Plato de comida 1" />
+            </div>
+            <div class="hero-card">
+              <img src="static/hero-card1.png" alt="Plato de comida 2" />
+            </div>
+            <div class="hero-card">
+              <img src="static/hero-card3.png" alt="Plato de comida 3" />
+            </div>
+          </div>
         </div>
-        <img src="./static/hero.png" alt="Tasty Meat" />
+        <section class="hero-img"></section>
       </section>
       <section class="about">
         <img src="static/About.png" alt="Salmon dish with vegetables" />
