special-dishes almost done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="styles/menu.css" rel="stylesheet" />
     <link href="styles/booking-opening.css" rel="stylesheet" />
     <link href="styles/blog.css" rel="stylesheet" />
+    <link href="styles/special-dishes.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -233,7 +234,7 @@
     <main>
       <section class="hero-container">
         <div class="hero-left">
-          <img src="./static/leafs.png" alt="" />
+          <img src="./static/leafs.png" alt="a green leaf" />
           <h1>HAVE A <strong>DELICIOUS</strong> MEAL WITH US.</h1>
           <div class="hero-p">
             <p>
@@ -267,7 +268,7 @@
       <section class="about">
         <img src="static/About.png" alt="Salmon dish with vegetables" />
         <div class="about-container">
-          <img src="static/leafs.png" alt="leaf" />
+          <img src="static/leafs.png" alt="a green leaf" />
           <h6 class="sofia-regular">About Us</h6>
           <h1>Discover your favorite food within our restaurant</h1>
           <p>
@@ -279,6 +280,27 @@
           </p>
           <a href="">Read More</a>
         </div>
+      </section>
+      <section class="special-dishes">
+        <img src="static/leafs.png" alt="a green leaf" />
+        <div class="special-dishes-top">
+          <h2>Our Special Dishes</h2>
+          <a href="#">View All -></a>
+        </div>
+        <section class="dishes-cards-container">
+          <div class="dishes-card">
+            <img src="static/special-dish1.png" alt="Special Dish 1" />
+          </div>
+          <div class="dishes-card">
+            <img src="static/special-dish3.png" alt="Special Dish 2" />
+          </div>
+          <div class="dishes-card">
+            <img src="static/special-dish3.png" alt="Special Dish 3" />
+          </div>
+          <div class="dishes-card">
+            <img src="static/special-dish4.png" alt="Special Dish 4" />
+          </div>
+        </section>
       </section>
       <section class="special-offer">
         <h6 class="sofia-regular">Special Offer</h6>
