--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="styles/booking-opening.css" rel="stylesheet" />
     <link href="styles/blog.css" rel="stylesheet" />
     <link href="styles/special-dishes.css" rel="stylesheet" />
+    <link href="styles/food-gallery.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -557,6 +558,26 @@
             </div>
           </article>
         </div>
+      </section>
+      <section class="food-gallery">
+        <div class="food-gallery-top">
+          <img src="static/leafs.png" alt="a green leaf" />
+          <h6 class="sofia-regular">Food Gallery</h6>
+          <h2>Our Food Gallery</h2>
+          <p>
+            Indulge your senses with a stunning display of mouthwatering
+            culinary creations in our captivating Food Gallery. Feast your eyes
+            and awaking your cravings!
+          </p>
+        </div>
+        <section class="food-gallery-container">
+          <img src="static/food-gallery1.png" alt="food 1" />
+          <img src="static/food-gallery2.png" alt="food 2" />
+          <img src="static/food-gallery3.png" alt="food 3" />
+          <img src="static/food-gallery4.png" alt="food 4" />
+          <img src="static/food-gallery5.png" alt="food 5" />
+          <img src="static/food-gallery6.png" alt="food 6" />
+        </section>
       </section>
       <section class="booking-opening">
         <form action="" class="boo-op-container">
