--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link href="styles/blog.css" rel="stylesheet" />
     <link href="styles/special-dishes.css" rel="stylesheet" />
     <link href="styles/food-gallery.css" rel="stylesheet" />
+    <link href="styles/our-chefs.css" rel="stylesheet" />
+    <link href="styles/reviews.css" rel="stylesheet" />
+    <link href="styles/our-location.css" rel="stylesheet" />
+    <link href="styles/footer.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -660,6 +664,69 @@
           <a href="#menu">Order Now</a>
         </div>
       </section>
+      <section class="our-chefs">
+        <div class="food-gallery-top">
+          <img src="static/leafs.png" alt="a green leaf" />
+          <h6 class="sofia-regular">Our Chefs</h6>
+          <h2>Meet Our Chefs</h2>
+          <p>
+            Get acquainted with our talented culinary maestros in the Meet Our
+            Chefs section. Learn about their expertise, passion and creative
+            flair that elevate our culinary delights. that elevate our culinary
+            delights.
+          </p>
+        </div>
+        <section class="chefs-container">
+          <div class="chef-card">
+            <img src="static/chef-card1.png" alt="chef 1" />
+          </div>
+          <div class="chef-card">
+            <img src="static/chef-card1.png" alt="chef 2" />
+          </div>
+          <div class="chef-card">
+            <img src="static/chef-card1.png" alt="chef 3" />
+          </div>
+        </section>
+      </section>
+      <section class="reviews">
+        <svg
+          fill="#000000"
+          height="64px"
+          width="64px"
+          version="1.1"
+          id="Icons"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 32 32"
+          xml:space="preserve"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <g>
+              <path
+                d="M13,11c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5s-2.2-5-5-5c-0.3,0-0.7,0-1,0.1 C9.3,11.8,11,11,13,11z"
+              ></path>
+              <path
+                d="M23,13c-0.3,0-0.7,0-1,0.1c1.3-1.3,3-2.1,5-2.1c0.6,0,1-0.4,1-1s-0.4-1-1-1c-5,0-9,4-9,9c0,2.8,2.2,5,5,5s5-2.2,5-5 S25.8,13,23,13z"
+              ></path>
+            </g>
+          </g>
+        </svg>
+        <p>Delicious food, great service, highly recommend</p>
+        <p>Good Food Restaurant!</p>
+        <hr />
+        <div class="reviewer-profile">
+          <img src="static/review-profile.png" alt="reviewer profile" />
+          <h6>Esther Howard</h6>
+          <p>Manager ABC Group</p>
+        </div>
+      </section>
+
       <section class="blog">
         <img src="static/leafs.png" alt="leaf" />
         <h6 class="sofia-regular">Our Blog</h6>
@@ -718,7 +785,58 @@
           </button>
         </div>
       </section>
+      <section class="our-location">
+        <section>
+          <img src="static/leafs.png" alt="a grren leaf" />
+          <h6 class="sofia-regular">Our Location</h6>
+          <h2>VISIT OUR RESTAURANT</h2>
+          <p>We think of our clients as guests we've invited to a party,</p>
+          <p>and we're the hosts.</p>
+          <div class="information">
+            <p>Address: 2715 Ash Dr. San Jose, South Dakota 83475</p>
+            <p>Email: debbie.baker@example.com</p>
+            <p>Phone: (219) 555-0114</p>
+          </div>
+          <div class="buttons-container">
+            <button class="button">Get directions</button>
+            <ul>
+              <li>Youtube</li>
+              <li>Facebook</li>
+              <li>Instagra</li>
+              <li>Twiter</li>
+            </ul>
+          </div>
+        </section>
+        <div class="food-cards-container">
+          <div class="food-card">
+            <img src="static/our-location1.png" alt="food" />
+          </div>
+          <div class="food-card">
+            <img src="static/our-location2.png" alt="food" />
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <img src="static/footer-logo.png" alt="" />
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Menu</a>
+        </li>
+        <li>
+          <a href="">Order</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+      </ul>
+      <p>Copyright 2023 by RestFood All rights reserved</p>
+    </footer>
   </body>
 </html>
