Fixed CSS Scale

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title></title>
@@ -283,7 +283,7 @@
             symphony of flavors crafted with passion and precision, leaving your
             taste buds longing for more.
           </p>
-          <a href="">Read More</a>
+          <a href="#" class="about-btn">Read more</a>
         </div>
       </section>
       <section class="special-dishes">
@@ -345,17 +345,17 @@
             <img src="static/FoodMenu/KingBurguer.png" alt="King Burguer" />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>King Burger</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -371,17 +371,17 @@
             <img src="static/FoodMenu/TomatoPizza.png" alt="Tomato Pizza" />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>Tomato Pizza</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -397,17 +397,17 @@
             <img src="static/FoodMenu/FriedSnacks.png" alt="Fried Snacks" />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>Fried Snacks</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -426,17 +426,17 @@
             />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>Vegetable Salads</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -455,17 +455,17 @@
             />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>Fetuccine Alfredo</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -484,17 +484,17 @@
             />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
+                <i class="fa-solid fa-star fa-lg"></i>
               </div>
               <div class="food-info">
                 <h5>Macoroni Cheese</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -520,7 +520,7 @@
                 <h5>Desserts Food</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -539,17 +539,17 @@
             />
             <div class="food-container">
               <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star fa-xl"></i>
+                <i class="fa-solid fa-star fa-xl"></i>
+                <i class="fa-solid fa-star fa-xl"></i>
+                <i class="fa-solid fa-star fa-xl"></i>
+                <i class="fa-solid fa-star fa-xl"></i>
               </div>
               <div class="food-info">
                 <h5>Margarita Drinks</h5>
                 <p>$150</p>
               </div>
-              <div class="food-buttons">
+              <div class="offer-buttons">
                 <a href="">Order Now</a>
                 <a href=""
                   ><i class="fa-solid fa-magnifying-glass fa-xs"></i
@@ -592,7 +592,7 @@
           </div>
           <div class="n-person">
             <div class="input-container">
-              <i class="fa-solid fa-person"></i>
+              <i class="fa-solid fa-person fa-xl"></i>
               <select required>
                 <option value="0" selected>Person</option>
                 <option value="1">1 Adult</option>
@@ -604,7 +604,7 @@
             </div>
 
             <div class="input-container">
-              <i class="fa-solid fa-child"></i>
+              <i class="fa-solid fa-child fa-xl"></i>
               <select required>
                 <option value="0" selected>Kid's</option>
                 <option value="1">1 Child</option>
@@ -617,12 +617,12 @@
           </div>
           <div class="time">
             <div class="input-container">
-              <i class="fa-solid fa-calendar"></i>
+              <i class="fa-solid fa-calendar fa-lg"></i>
               <input name="date" type="date" min="2024-02-23" required />
               <label for="date" class="info-label">Date</label>
             </div>
             <div class="input-container">
-              <i class="fa-solid fa-clock"></i>
+              <i class="fa-solid fa-clock fa-lg"></i>
               <input name="time" type="time" min="07:30" max="23:30" required />
               <label for="time" class="info-label">Time</label>
             </div>
@@ -657,7 +657,7 @@
               <time>7 Days 12.30pm to 3.30pm</time>
             </div>
           </div>
-          <div class="op-time">
+          <div class="op-time op-large">
             <h4>Dinner</h4>
             <time>Every Weekdays 8.30pm to 11.30pm</time>
           </div>
@@ -726,14 +726,13 @@
           <p>Manager ABC Group</p>
         </div>
       </section>
-
       <section class="blog">
         <img src="static/leafs.png" alt="leaf" />
         <h6 class="sofia-regular">Our Blog</h6>
         <h1>Know More About The Article</h1>
         <div class="wrapper">
           <button class="btn-left" id="btn-left">
-            <i class="fa-solid fa-angle-left fa-2xl"></i>
+            <i class="fa-solid fa-angle-left fa-3x"></i>
           </button>
 
           <ul class="carousel">
@@ -781,7 +780,7 @@
             </li>
           </ul>
           <button class="btn-right" id="btn-right">
-            <i class="fa-solid fa-angle-right fa-2xl"></i>
+            <i class="fa-solid fa-angle-right fa-3x"></i>
           </button>
         </div>
       </section>
